--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "2720project",
+  "name": "login_register_system",
   "version": "1.0.0",
-  "description": "Journey time indicators",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/garychf/2720Project.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/garychf/2720Project/issues"
-  },
-  "homepage": "https://github.com/garychf/2720Project#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.0.0",
+    "cookie-session": "^1.4.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.6",
-    "node-fetch": "^2.6.1",
-    "xml-js": "^1.6.11"
-  }
+    "mongoose": "^5.12.7"
+  },
+  "description": ""
 }
