--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -11,9 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "node-fetch": "^2.6.1",
+    "xml-js": "^1.6.11"
   },
-  "description": ""
+  "description": "Journey time indicators"
 }
